[tool.poetry]
name = "libpycom"
version = "0.2.0"
description = ""
authors = ["Kurayuri <Kurayuri@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "*"
numpy = "*"
pydantic = "^2.0"
pyyaml = "*"
requests = "*"
rich = "*"
websocket-client = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
